# OglTest

./: .gitignore  CMakeLists.txt  README.md
common/: main.cpp  main.h  shader.cpp  shader.hpp  texture.cpp
test1_red_triangle/: SimpleFragmentShader.fragmentshader  triangle.cpp
test2_separate_program/: SepFragmentShader.frag  SepVertexShader.vert  Simple.frag  Simple.vert  separate_program.cpp
test3_more_separate/: SepFragmentShader.frag  SepGeometryShader.geom  SepVertexShader.vert  more_separate.cpp
test4_tess/: SepFragmentShader.frag  SepTesShader.tese  tess.cpp
test5_tess_full/: SepFragmentShader.frag  SepGeometryShader.geom  SepTcsShader.tesc  SepTesShader.tese  SepVertexShader.vert  tess_full.cpp
test6_cube_full/: GS.geom  README.txt  SimpleFragmentShader.frag  SimpleVertexShader.vert  Tcs.tesc  Tes.tese  TesForGS.tese  UBOGS.geom  UBOSimpleVS.vert  UBOTcs.tesc  UBOTes.tese  UBOTesForGS.tese  UBOVS.vert  UBOVSForGS.vert  VS.vert  VSForGS.vert  cube_full.cpp
test7_mem_stress/: FS.frag  VS.vert  mem_stress.cpp
test8_compat_triangle/: triangle.cpp
